--- a/frontend/components/auth-form/_auth-form.html.erb
+++ b/frontend/components/auth-form/_auth-form.html.erb
@@ -1,4 +1,6 @@
-<%= form_tag login_path, method: :post, class: "auth-form" do %>
- <%= text_field_tag :username, "", class: "auth-form--input", placeholder: "Choose your username...", autofocus: true, required: true %>
- <%= submit_tag "Identify me", class: "auth-form--submit" %>
-<% end %>
+<div class="auth-form">
+  <%= form_tag login_path, method: :post do %>
+   <%= text_field_tag :username, "", class: "auth-form--input", placeholder: "Choose your username...", autofocus: true, required: true %>
+   <%= submit_tag "Identify me", class: "auth-form--submit" %>
+  <% end %>
+</div>
