Add example for `postcss-inline-svg`

--- a/frontend/components/message-form/message-form.css
+++ b/frontend/components/message-form/message-form.css
@@ -26,10 +26,13 @@
     background: #3f94f9;
     border: 1px solid #3f94f9;
     color: white;
-    font-size: 18px;
     outline: none;
     transition: opacity 150ms;
     cursor: pointer;
+    background-image: svg-load("./static/icon.svg", fill=white);
+    background-repeat: no-repeat;
+    background-size: 50px;
+    background-position: center;
 
     &:hover,
     &:focus {
